--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,9 @@ plotly==5.18.0
 Jinja2==3.1.2
 webbrowser-compat==2022.6.0
 
+# Testing
+pytest==8.2.0
+pytest-cov==4.1.0
+pytest-mock==3.12.0
+pytest-dbt-core==1.0.0
+
